--- a/XamarinCommunityToolkitSample/Xamarin.CommunityToolkit.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Xamarin.CommunityToolkit.Sample.csproj
@@ -10,13 +10,16 @@
     <Compile Remove="resources\**" />
     <EmbeddedResource Remove="resources\**" />
     <None Remove="resources\**" />
-    <EmbeddedResource Update="Pages\Behaviors\AutoGridLayoutBehaviorPage.xaml">
+    <EmbeddedResource Update="Pages\Behaviors\ImpliedOrderGridBehaviorPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Resx\AppResources.es.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.es.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Compile Update="Pages\Behaviors\ImpliedOrderGridBehaviorPage.xaml.cs">
+      <DependentUpon>ImpliedOrderGridBehaviorPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Resx\AppResources.es.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
