--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Build.TypeRedirector" Version="0.1.2-preview" PrivateAssets="all" />
+    <None Include="**\*.cs;**\*.xml;**\*.axml;**\*.png" Exclude="obj\**\*.*;bin\**\*.*;bin;obj" />
     <Compile Include="**/*.shared.cs" />
     <Compile Include="**/*.shared.*.cs" />
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
@@ -80,30 +81,40 @@
             <Name>Windows Mobile Extensions for the UWP</Name>
           </SDKReference>
         -->
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
-      <Compile Include="**\*.android.cs" />
-      <Compile Include="**\*.android.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
-      <Compile Include="**\*.ios.cs" />
-      <Compile Include="**\*.ios.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.TVOS')) ">
-      <Compile Include="**\*.tvos.cs" />
-      <Compile Include="**\*.tvos.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.WatchOS')) ">
-      <Compile Include="**\*.watchos.cs" />
-      <Compile Include="**\*.watchos.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.Mac')) ">
-      <Reference Include="netstandard" Condition=" '$(OS)' == 'Windows_NT' " />
-      <Compile Include="**\*.macos.cs" />
-      <Compile Include="**\*.macos.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
-      <Compile Include="**\*.tizen.cs" />
-      <Compile Include="**\*.tizen.*.cs" />
-    </ItemGroup>
+  </ItemGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
+    <Compile Include="**\*.android.cs" />
+    <Compile Include="**\*.android.*.cs" />
+    
+    <!--Resources-->
+    <AndroidResource Include="Resources\**\*.axml" />
+    <AndroidResource Include="Resources\**\*.xml" />
+    <AndroidResource Include="Resources\**\*.png" />
+  </ItemGroup>
+  
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
+    <Compile Include="**\*.ios.cs" />
+    <Compile Include="**\*.ios.*.cs" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.TVOS')) ">
+    <Compile Include="**\*.tvos.cs" />
+    <Compile Include="**\*.tvos.*.cs" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.Mac')) ">
+    <Reference Include="netstandard" Condition=" '$(OS)' == 'Windows_NT' " />
+    <Compile Include="**\*.macos.cs" />
+    <Compile Include="**\*.macos.*.cs" />
+  </ItemGroup>
+  
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.WatchOS')) ">
+    <Compile Include="**\*.watchos.cs" />
+    <Compile Include="**\*.watchos.*.cs" />
+  </ItemGroup>
+  
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
+    <Compile Include="**\*.tizen.cs" />
+    <Compile Include="**\*.tizen.*.cs" />
+  </ItemGroup>
 </Project>
