Finish Unit Tests

--- a/XamarinCommunityToolkit.UnitTests/Xamarin.CommunityToolkit.UnitTests.csproj
+++ b/XamarinCommunityToolkit.UnitTests/Xamarin.CommunityToolkit.UnitTests.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <Folder Include="Converters\" />
     <Folder Include="Mocks\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 
   <ItemGroup>
