Implemented the BindablePropertyBuilde

--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -68,6 +68,9 @@
     <Compile Include="Helpers\BindablePropertyParameters.cs">
       <SubType></SubType>
     </Compile>
+    <Compile Include="Helpers\BindablePropertyBuilder.cs">
+      <SubType></SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.0')) ">
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
