--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -67,12 +67,6 @@
     <Compile Include="**/*.shared.*.cs" />
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
     <None Include="..\assets\XamarinCommunityToolkit_128x128.png" PackagePath="icon.png" Pack="true" />
-    <Compile Include="Helpers\BindablePropertyParameters.cs">
-      <SubType></SubType>
-    </Compile>
-    <Compile Include="Helpers\BindablePropertyBuilder.cs">
-      <SubType></SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.0')) ">
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
@@ -157,5 +151,14 @@
     <Reference Include="WindowsBase" />
     <PackageReference Include="Xamarin.Forms.Platform.WPF" Version="4.5.0.356" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Helpers\BindablePropertyBuilder.shared.cs">
+      <SubType></SubType>
+    </Compile>
+    <Compile Update="Helpers\BindablePropertyParameters.shared.cs">
+      <SubType></SubType>
+    </Compile>
   </ItemGroup>
 </Project>
