--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -74,6 +74,18 @@
     <Compile Include="**/*.shared.*.cs" />
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
     <None Include="..\assets\XamarinCommunityToolkit_128x128.png" PackagePath="icon.png" Pack="true" />
+    <Compile Include="Views\AvatarView\ColorTheme.cs">
+      <SubType></SubType>
+    </Compile>
+    <Compile Include="Views\AvatarView\ColorThemeBase.cs">
+      <SubType></SubType>
+    </Compile>
+    <Compile Include="Views\AvatarView\ColorThemes.cs">
+      <SubType></SubType>
+    </Compile>
+    <Compile Include="Views\AvatarView\IColorTheme.cs">
+      <SubType></SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.0')) ">
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
@@ -213,5 +225,11 @@
 
   <ItemGroup>
     <Folder Include="Views\Snackbar\Helpers\WPF\" />
+    <Folder Include="Views\AvatarView\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\AvatarView\AvatarView.shared.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 </Project>
